--- a/00-M2-CS2B-ASI-July-2022/M2-Question6.Rmd
+++ b/00-M2-CS2B-ASI-July-2022/M2-Question6.Rmd
@@ -3,7 +3,6 @@ title: "Statistics with R"
 subtitle: "Introduction to R for Actuarial Students"
 output:
   xaringan::moon_reader:
-    css: xaringan-themer.css
     lib_dir: libs
     nature:
       highlightStyle: github
@@ -15,22 +14,124 @@ output:
 knitr::opts_chunk$set(echo = TRUE)
 library(magrittr)
 library(knitr)
-#library(dplyr)
 library(janitor)
-
-
 ```
 
 ```{r xaringan-themer, include=FALSE, warning=FALSE}
 library(xaringanthemer)
 style_mono_accent_inverse(
-  #base_color = "#3C989E")(
   base_color = "#1c5253",
   header_font_google = google_font("Josefin Sans"),
   text_font_google   = google_font("Montserrat", "300", "300i"),
   code_font_google   = google_font("Fira Mono")
 )
 ```
+
+---
+
+## 🏏 CS2B – Risk Modelling and Survival Analysis
+
+This module emphasizes the application of statistical methods to actuarial problems using real datasets and R. Topics include:
+
+- Time Series  
+- Probability Distributions  
+- Survival Analysis  
+
+---
+
+## 📁 Dataset: Cricket.csv
+
+The dataset contains IPL 2022 performance data for players, with the following columns:
+
+- **Player**: Name of the player  
+- **Team**: Team represented  
+- **Init_Group**: Initial classification (Batsman, Bowler, Alrounder)  
+- **Runs**: Total runs scored  
+- **Ave_Bat**: Batting average  
+- **Wickets**: Total wickets taken  
+- **Economy**: Bowling economy rate  
+
+---
+
+## 🔍 Part A: Group Averages
+
+```{r}
+runs_avg <- aggregate(Runs ~ Init_group, data = Cricket, FUN = mean)
+wickets_avg <- aggregate(Wickets ~ Init_group, data = Cricket, FUN = mean)
+runs_avg
+wickets_avg
+```
+
+---
+
+## 🧮 Part B: Prepare Data for Clustering
+
+```{r}
+Cricket1 <- Cricket[, 4:7]  # Select numerical columns
+Cricket1 <- as.data.frame(scale(Cricket1))  # Feature scaling
+set.seed(100)
+```
+
+---
+
+## 🔗 Part C: K-Means Clustering
+
+```{r}
+clust_Cricket <- kmeans(Cricket1, centers = 3)
+clust_Cricket$centers  # Cluster means
+```
+
+---
+
+## 🧾 Part D: Add Cluster Membership
+
+```{r}
+Cricket$Clust_Membership <- clust_Cricket$cluster
+```
+
+---
+
+## 🏷️ Part E: Rename Clusters
+
+```{r}
+Cricket$Clust_Membership <- factor(Cricket$Clust_Membership, 
+                                   labels = c("Bowler", "Batsman", "Alrounder"))
+```
+
+---
+
+## 📊 Part F: Error Rate
+
+```{r}
+table(Cricket$Clust_Membership, Cricket$Init_group)
+error <- (32 + 11 + 24 + 23) / nrow(Cricket)
+error
+```
+
+---
+
+## 💬 Part G: Reasons for Misclassification
+
+- Some batsmen may have played few matches and scored few runs  
+- Bowlers with limited wickets may be misclassified  
+- Players not fitting clear batting/bowling profiles are grouped as alrounders  
+- No batsman was classified as bowler or vice versa—misclassification is mostly among alrounders  
+- Filtering for players with minimum match count could improve clustering accuracy  
+
+---
+
+## ✅ Summary of Workflow
+
+1. Load and inspect the dataset  
+2. Compute group averages for runs and wickets  
+3. Prepare and scale numerical data  
+4. Apply k-means clustering  
+5. Assign and rename cluster memberships  
+6. Compare clusters with initial groupings  
+7. Analyze misclassification causes  
+
+---
+
 
 ***CS2B – Risk Modelling and Survival Analysis ***
 
@@ -40,6 +141,11 @@ style_mono_accent_inverse(
 * Time Series. Probability Distributions, Survival Analysis
 
 ---
+
+```{r}
+library(readr)
+Cricket <- read_csv("Cricket.csv")
+```
 
 Q. 6) Refer to the data set “Cricket.csv”. 
 
@@ -55,6 +161,16 @@ G. Economy – Economy as a bowler
 
 ---
 
+```{r}
+head(Cricket)
+```
+
+
+```{r}
+library(dplyr)
+Cricket1 <- Cricket %>% select(Runs:Econonmy)
+```
+
 ### Exercises
 
 Load the data into R and answer the following Questions. Name the data frame as “Cricket”.
@@ -67,9 +183,11 @@ numerical columns and remove the rest of them.
 
 ---
 Perform a feature scaling on Cricket1 by executing the following code 
+
 ```{r}
 Cricket1 = as.data.frame(scale (Cricket1))
 ```
+
 After scaling, set a seed value of 100 using the following code <ttset.seed(100)</tt.
 
 ---
@@ -96,8 +214,7 @@ created.
 ### Part A
 
 ```{r}
-Cricket <- read.csv("D:\\IAI ### Question  Paper\\July 2022\\CS2B_Final\\Cricket.c
-sv")
+#Cricket <- read.csv("D:\\IAI ### Question  Paper\\July 2022\\CS2B_Final\\Cricket.csv")
 
 ```
 
@@ -155,7 +272,7 @@ clust_Cricket
 
 ---
 
-```{r}
+```{r eval=FALSE}
 
 
 ## Clustering vector:
@@ -178,8 +295,7 @@ clust_Cricket
 ## 
 ## Available components:
 ## 
-## [1] "cluster" "centers" "totss" "withinss" "tot.withi
-nss"
+## [1] "cluster" "centers" "totss" "withinss" "tot.withinss"
 ## [6] "betweenss" "size" "iter" "ifault"
 
 ---
@@ -245,14 +361,16 @@ Here's the R code to answer the questions and perform the requested analysis:
 Cricket <- read.csv("Cricket.csv")
 
 # 1. Average runs and wickets by group
-group_averages <- aggregate(Runs + Wickets ~ Initial.Grouping, Cricket, FUN = mean)
-print(group_averages)
+#group_averages <- aggregate(Runs + Wickets ~ Initial.Grouping, Cricket, FUN = mean)
+#print(group_averages)
 
 # 2. Copy and select numerical columns
-Cricket1 <- Cricket[, c(2:5)]
-
+Cricket1 <- Cricket[, c(3:7)]
+```
 ---
 
+
+```{r}
 # 3. Feature scaling and setting seed
 Cricket1 <- as.data.frame(scale(Cricket1))
 set.seed(100)
@@ -261,21 +379,26 @@ set.seed(100)
 clust_Cricket <- kmeans(Cricket1, centers = 3, nstart = 20)
 print(clust_Cricket$centers)  # Print cluster means
 
-
+```
 ---
 
+```{r}
 # 5. Add cluster membership and rename
 Cricket$Clust_Membership <- clust_Cricket$cluster
 Cricket$Clust_Membership <- factor(Cricket$Clust_Membership, 
                                     levels = 1:3, 
                                     labels = c("Batsman", "Bowler", "Alrounder")[order(mean(Cricket[, 2:3] ), decreasing = c(TRUE, FALSE))])
-
+```
 ---
+
+```{r}
 
 # 6. Error rate calculation (assuming "Initial.Grouping" is the true grouping)
 misclassified <- sum(Cricket$Clust_Membership != Cricket$Initial.Grouping)
 error_rate <- misclassified / nrow(Cricket) * 100
 print(paste("Error rate:", error_rate, "%"))
+```
+
 
 ---
 
@@ -285,7 +408,7 @@ print(paste("Error rate:", error_rate, "%"))
 * **Number of clusters:** Using only three clusters might not perfectly represent the diverse skillsets of players. More clusters could lead to more accurate groupings.
 * **Feature selection:** Only runs and wickets were used for clustering.  Additional features like batting average, bowling average, and strike rate could provide more information for differentiating player types.
 * **Choice of distance metric:** K-means uses Euclidean distance. Alternative distance metrics might provide better separation between player types.
-```
+
 
 ---
 
